--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="row">
       <nav class="row">
-        <span class="column-11 column-11-mobile title">The first page</span>
+        <span class="column-11 column-11-mobile title">First page</span>
         <section class=column-11>
           <a href="" class="column-11 icon column-11-mobile" id="menu"><i class="fa fa-bars" aria-hidden="true"></i></a>
           <ul class="row menu hidden">
@@ -38,8 +38,9 @@
         </section>
         <section class="column-8">
           <h3>Contact Us</h3>
-          <p>Proin sit ametp urna tristique ultrices urna a efficitur nibh</p>
-          <p>Orci varius natoque penatibus et magnis</p>
+          <h4>The first page</h4>
+          <p> 3481 Melrose Place Beverly Hills, CA 90210</p>
+          <p>P: (55)55-02-34-11<br>E: <a href="https://gmail.com" target="_blank" class="mail">abinyuuu@gmail.com</a></p>
         </section>
       </section>
 
@@ -67,6 +68,5 @@
     <footer class="row">
       <span class="column-12">Copyright © 2018</span>
     </footer>
-    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
