--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="row">
         <span class="column-11 column-11-mobile title">First page</span>
         <section class=column-11>
-          <a href="" class="column-11 icon column-11-mobile" id="menu"><i class="fa fa-bars" aria-hidden="true"></i></a>
+          <a href="" class="column-11 icon column-11-mobile"><i class="fa fa-bars" aria-hidden="true"></i></a>
           <ul class="row menu hidden">
             <li class="column-9 column-9-mobile menu"><a href="">Home</a></li>
             <li class="column-9 column-9-mobile menu"><a href="">About</a></li>
